--- a/.classpath
+++ b/.classpath
@@ -3,10 +3,11 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="libs/commons-lang3-3.1.jar"/>
 	<classpathentry kind="lib" path="libs/microba-0.4.4.3.jar"/>
+	<classpathentry kind="lib" path="libs/mongo-java-driver-2.13.0.jar"/>
 	<classpathentry kind="lib" path="libs/DynamicReports/dist/dynamicreports-adhoc-3.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/DynamicReports/dist/dynamicreports-core-3.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/DynamicReports/dist/dynamicreports-examples-3.1.0.jar"/>
